# docuverse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-appimage.yml  build-linux.yml  build-windows.yml  code-qa.yml  py-lint-format.yml  py-type-check.yml  release.yml
prompts/: sys_prompt.md
src/dv/: cli.py  config.py  database.py  gui.py  logger.py  main.py  prompts.py  qa.py  similarity_search.py  utils.py
